{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 54,
  "lineage": "d61284df-e453-755e-434c-7bb6f183e19d",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_instance",
      "name": "appserver",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-01-18T17:57:38.599-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/terraform-gcp-255501/global/firewalls/allow-http",
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-255501/global/networks/default",
            "priority": 1000,
            "project": "terraform-gcp-255501",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-255501/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-01-18T17:57:38.477-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/terraform-gcp-255501/global/firewalls/allow-https",
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-255501/global/networks/default",
            "priority": 1000,
            "project": "terraform-gcp-255501",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-255501/global/firewalls/allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-https"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-01-18T17:57:38.709-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/terraform-gcp-255501/global/firewalls/allow-ssh",
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-255501/global/networks/default",
            "priority": 1000,
            "project": "terraform-gcp-255501",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-255501/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-1804-bionic-v20200108",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-255501/zones/us-east1-c/disks/udemy-vm-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "description": "This is Irvs test VM",
            "enable_display": false,
            "id": "projects/terraform-gcp-255501/zones/us-east1-c/instances/udemy-vm-1",
            "instance_id": "6254894809581750010",
            "label_fingerprint": "eo2ccoB72JI=",
            "labels": {
              "machine_type": "n1-standard-2",
              "name": "udemy-vm-1"
            },
            "machine_type": "n1-standard-2",
            "metadata": {
              "foo": "bar",
              "size": "20"
            },
            "metadata_fingerprint": "bDMTU_hPmps=",
            "metadata_startup_script": "echo Irving \u003e /hello.txt",
            "name": "udemy-vm-1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-255501/global/networks/default",
                "network_ip": "10.142.0.40",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-255501/regions/us-east1/subnetworks/default",
                "subnetwork_project": "terraform-gcp-255501"
              }
            ],
            "project": "terraform-gcp-255501",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-255501/zones/us-east1-c/instances/udemy-vm-1",
            "service_account": [
              {
                "email": "391473914337-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "tags": [
              "allow-http",
              "allow-https",
              "allow-ssh"
            ],
            "tags_fingerprint": "sEn_6wOAnyk=",
            "zone": "us-east1-c"
          }
        }
      ]
    }
  ]
}